crates/rtd/tests/snapshots/ptb_files_tests__keyword_resolution.ptb.snap
---
source: crates/rtd/tests/ptb_files_tests.rs
expression: "results.join(\"\\n\")"
---
 === ERRORS AFTER PARSING INPUT COMMANDS === 
  × Error when processing PTB
   ╭─[1:10]
 1 │ --assign gas @0x1
   ·          ─┬─
   ·           ╰── Expected a variable name but found reserved word 'gas'.
 2 │ --assign none @0x1 
   ╰────
  help: Variable names cannot be 'address', 'bool', 'vector', 'some',
        'none', 'gas', 'u8', 'u16', 'u32', 'u64', 'u128', or 'u256'.

  × Error when processing PTB
   ╭─[2:10]
 1 │ --assign gas @0x1
 2 │ --assign none @0x1 
   ·          ──┬─
   ·            ╰── Expected a variable name but found reserved word 'none'.
   ╰────
  help: Variable names cannot be 'address', 'bool', 'vector', 'some',
        'none', 'gas', 'u8', 'u16', 'u32', 'u64', 'u128', or 'u256'.
