crates/rtd/tests/snapshots/ptb_files_tests__make_move_vec.ptb.snap
---
source: crates/rtd/tests/ptb_files_tests.rs
expression: "results.join(\"\\n\")"
---
 === PREVIEW === 
╭──────────────────────────────────────────────────────────────────╮
│ PTB Preview                                                      │
├───────────────┬──────────────────────────────────────────────────┤
│ command       │ values                                           │
├───────────────┼──────────────────────────────────────────────────┤
│ make-move-vec │ <u64> [1, 2, 3, 4]                               │
│ make-move-vec │ <u64> []                                         │
│ make-move-vec │ <0x1::a::b> [@0x1, @0x2]                         │
│ make-move-vec │ <address> [@0x1, @0x2]                           │
│ make-move-vec │ <vector<address>> [vector[@0x1], vector[@0x2]]   │
│ make-move-vec │ <std::option::Option<u64>> [none, none]          │
│ make-move-vec │ <std::option::Option<u64>> [none, none]          │
│ make-move-vec │ <std::option::Option<u64>> [none, some(1)]       │
│ make-move-vec │ <std::option::Option<u64>> [none, some(some(1))] │
│ make-move-vec │ <rtd::coin::Coin<rtd::rtd::RTD>> [gas]           │
╰───────────────┴──────────────────────────────────────────────────╯
 === BUILDING PTB ERRORS === 
  × Error when processing PTB
    ╭─[9:55]
  8 │ --make-move-vec <std::option::Option<u64>> [none,some(1)]
  9 │ --make-move-vec <std::option::Option<u64>> [none,some(some(1))]
    ·                                                       ───┬───
    ·                                                          ╰── Unable to serialize 'some(1)' as a u64 value
 10 │ --make-move-vec <rtd::coin::Coin<rtd::rtd::RTD>> [gas] 
    ╰────
  help: Literal option values cannot contain object values.

