crates/rtd/tests/snapshots/ptb_files_tests__move_call_fun_resolution.ptb.snap
---
source: crates/rtd/tests/ptb_files_tests.rs
expression: "&String::from_iter(normalized(results.join(\"\\n\").chars()))"
---
 === PREVIEW === 
╭────────────────────────────────────────────────────╮
│ PTB Preview                                        │
├───────────┬────────────────────────────────────────┤
│ command   │ values                                 │
├───────────┼────────────────────────────────────────┤
│ move-call │ zero_x_zero::option::is_none<u64> none │
│ assign    │ a none                                 │
│ assign    │ zero_x_zero @0x0                       │
│ move-call │ zero_x_zero::option::is_none<u64> a    │
│ move-call │ std::Option::is_none<u64> a            │
│ move-call │ std::option::isnone<u64> a             │
│ move-call │ std::option::is_none<u64>              │
│ move-call │ std::option::is_none<u64> a b          │
│ move-call │ rtd::coin::destroy_zero @0x1           │
│ move-call │ std::option::is_none<u64, bool> a      │
╰───────────┴────────────────────────────────────────╯
 === BUILDING PTB ERRORS === 
  × Error when processing PTB
   ╭─[1:13]
 1 │ --move-call zero_x_zero::option::is_none<u64> none
   ·             ─────┬─────
   ·                  ╰── Unbound named address: 'zero_x_zero'
 2 │ --assign a none
   ╰────
  help: This is most likely because the named address 'zero_x_zero' is not
        in scope. You can either bind a variable to the address that you
        want to use or use the address in the command.

  × Error when processing PTB
   ╭─[4:13]
 3 │ --assign zero_x_zero @0x0
 4 │ --move-call zero_x_zero::option::is_none<u64> a
   ·             ─────┬─────
   ·                  ╰── Object 0x0000000000000000000000000000000000000000000000000000000000000000 not found
 5 │ --move-call std::Option::is_none<u64> a
   ╰────

  × Error when processing PTB
   ╭─[5:18]
 4 │ --move-call zero_x_zero::option::is_none<u64> a
 5 │ --move-call std::Option::is_none<u64> a
   ·                  ───┬──
   ·                     ╰── Module not found in package: Option.
 6 │ --move-call std::option::isnone<u64> a
   ╰────
  help: Did you mean 'option'?

  × Error when processing PTB
   ╭─[6:26]
 5 │ --move-call std::Option::is_none<u64> a
 6 │ --move-call std::option::isnone<u64> a
   ·                          ───┬──
   ·                             ╰── Could not resolve function 'isnone' in module 'option'
 7 │ --move-call std::option::is_none<u64>
   ╰────
  help: Did you mean 'is_none'?

  × Error when processing PTB
   ╭─[7:13]
 6 │ --move-call std::option::isnone<u64> a
 7 │ --move-call std::option::is_none<u64>
   ·             ──────────┬─────────
   ·                       ╰── Expected 1 argument, but got 0
 8 │ --move-call std::option::is_none<u64> a b
   ╰────

  × Error when processing PTB
   ╭─[8:39]
 7 │ --move-call std::option::is_none<u64>
 8 │ --move-call std::option::is_none<u64> a b
   ·                                       ─┬─
   ·                                        ╰── Expected 1 argument, but got 2
 9 │ --move-call rtd::coin::destroy_zero @0x1
   ╰────

  × Error when processing PTB
    ╭─[9:37]
  8 │ --move-call std::option::is_none<u64> a b
  9 │ --move-call rtd::coin::destroy_zero @0x1
    ·                                     ──┬─
    ·                                       ╰── Not enough type parameters supplied for Move call
 10 │ --move-call std::option::is_none<u64, bool> a 
    ╰────
